--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,6 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "../index.html",
+  "start_url": "../self-monitoring",
   "display": "browser"
 }
