--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
       "src": "icons/512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "icons/192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ],
   "start_url": "../self-monitoring",
